# duplicate-detection

./: .dockerignore  .gitignore  API.md  DEPLOYMENT.md  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
api/: index.py
app/: __init__.py  config.py  embedding_detector.py  hash_detector.py  main.py  models.py  wlo_client.py
scripts/: analyze_model_weights.py  test_model_size.py
